.kubernetes/api-configuration.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circles-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circles-api
  template:
    metadata:
      labels:
        app: circles-api
    spec:
      automountServiceAccountToken: false
      containers:
      - name: circles-api
        image: europe-southwest1-docker.pkg.dev/circles4dev/circles/circles.api:latest
        ports:
        - containerPort: 5001
        resources:
          limits:
            memory: "512Mi"
            ephemeral-storage: "100Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            ephemeral-storage: "10Gi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5001
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: circles-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
  selector:
    app: circles-api
