.kubernetes/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circles-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circles-db
  template:
    metadata:
      labels:
        app: circles-db
    spec:
      automountServiceAccountToken: false
      containers:
      - name: circles-db
        image: postgres:latest        
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data2
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: circles-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: circles-db
