.kubernetes/web-configuration.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circles-web
  labels:
    app: circles-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circles-web
  template:
    metadata:
      labels:
        app: circles-web
    spec:
      containers:
      - name: circles-web
        image: europe-southwest1-docker.pkg.dev/circles4dev/circles/circles.web:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            ephemeral-storage: "100Mi"
          requests:
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: circles-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: circles-web
